--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,16 @@
   "name": "pontofon",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "css/style.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -19,7 +26,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
